--- a/landing.html
+++ b/landing.html
@@ -1,6 +1,3 @@
----
-title: Home
----
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -32,7 +29,7 @@ title: Home
 
 				<!-- Header -->
 					<header id="header">
-						<a href="/index.html" class="logo">Posts</a>
+						<a href="index.html" class="logo">Posts</a>
 					</header>
 
 				<!-- Nav -->
@@ -69,21 +66,6 @@ title: Home
 
 						<!-- Posts -->
 							<section class="posts">
-								{% for post in paginator.posts %}
-								<article>
-									<header>
-										<span class="date"></span>
-										<h2><a href="{{post.url}}">{{post.title}}</a></h2>
-									</header>
-									{% if post.hero_image %}
-									<a href="{{post.url}}" class="image fit"><img src="/assets/images/{{post.hero_image}}" /></a>
-									{% endif %}
-									<p>{{post.excerpt}}</p>
-									<ul class="actions special">
-										<li><a href="{{post.url}}" class="button">Read More</a></li>
-									</ul>
-								</article>
-								{% endfor %}
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
@@ -93,7 +75,7 @@ title: Home
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="{{ post.url}}" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -103,6 +85,30 @@ title: Home
 										imperdiet lorem</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 18, 2017</span>
+										<h2><a href="#">Ante mattis<br />
+										interdum dolor</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 14, 2017</span>
+										<h2><a href="#">Tempus sed<br />
+										nulla imperdiet</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
