--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Home
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Blog Posts</a></li>
+							<li class="active"><a href="/index.html">Blog Posts</a></li>
 							<li><a href="generic.html">Clubs</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -84,98 +84,44 @@ title: Home
 									</ul>
 								</article>
 								{% endfor %}
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+
 								
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="{{paginator.previous_page_path}}" class="previous">Prev</a>
+									{% if paginator.total_pages <= 5 %}
+										{% for each in (1..paginator.total_pages) %}
+											{% if each == paginator.page %}
+												<a href="/posts/page{{each}}" class="page active">{{each}}</a>
+											{% else %}
+												<a href="/posts/page{{each}}" class="page">{{each}}</a>
+											{% endif %}
+										{% endfor %}
+									{% else %}
+										{% for each in (1..paginator.total_pages) %}
+										{% if each == paginator.page %}
+											<a href="/posts/page{{each}}" class="page active">{{each}}</a>
+										{% elsif each == 2 or each==paginator.total_pages-1 %}
+											<span class="extra">&hellip;</span>
+										{% elsif each == 1 %}
+											<a href="/index" class="page">{{each}}</a>
+										{% elsif each == paginator.total_posts%}
+											<a href="/posts/page{{each}}" class="page">{{each}}</a>
+										{% endif %}
+										{% endfor %}
+									{% endif %}
+									
+									<a href="{{paginator.next_page_path}}" class="next">Next</a>
 								</div>
 							</footer>
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+					{% include landingfooter.html %}
 
 				<!-- Copyright -->
 					<div id="copyright">
