--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 title: Home
+pagination:
+  enabled: true
 ---
 <!DOCTYPE HTML>
 <!--
@@ -54,25 +56,32 @@ title: Home
 					<div id="main">
 
 						<!-- Featured Post -->
+						{% if paginator.page == 1 %}
 							<article class="post featured">
+								{% assign first_post = site.posts | first %}
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">Obligatory massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam	facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">{{first_post.date| date_to_long_string: "ordinal"}}</span>
+									<h2><a href="{{first_post.url}}">{{ first_post.title }}</a></h2>
+									{%if first_post.header_line %}
+									<p>{{ first_post.header_line }}</p>
+									{% endif %}
 								</header>
+								{% if first_post.hero_image %}
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								{% endif %}
+								
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="{{first_post.url}}" class="button large">Read More</a></li>
 								</ul>
-							</article>
 
+							</article>
+						{% endif %}
 						<!-- Posts -->
 							<section class="posts">
 								{% for post in paginator.posts %}
 								<article>
 									<header>
-										<span class="date"></span>
+										<span class="date">{{ post.date|date_to_long_string: "ordinal" }}</span>
 										<h2><a href="{{post.url}}">{{post.title}}</a></h2>
 									</header>
 									{% if post.hero_image %}
