--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@ pagination:
 									{% if paginator.total_pages <= 5 %}
 										{% for each in (1..paginator.total_pages) %}
 											{% if each == paginator.page %}
-												<a href="/posts/page{{each}}" class="page active">{{each}}</a>
+												<a href="/page{{each}}" class="page active">{{each}}</a>
 											{% else %}
-												<a href="/posts/page{{each}}" class="page">{{each}}</a>
+												<a href="/page{{each}}" class="page">{{each}}</a>
 											{% endif %}
 										{% endfor %}
 									{% else %}
 										{% for each in (1..paginator.total_pages) %}
 										{% if each == paginator.page %}
-											<a href="/posts/page{{each}}" class="page active">{{each}}</a>
+											<a href="/page{{each}}" class="page active">{{each}}</a>
 										{% elsif each == 2 or each==paginator.total_pages-1 %}
 											<span class="extra">&hellip;</span>
 										{% elsif each == 1 %}
 											<a href="/index" class="page">{{each}}</a>
 										{% elsif each == paginator.total_posts%}
-											<a href="/posts/page{{each}}" class="page">{{each}}</a>
+											<a href="/page{{each}}" class="page">{{each}}</a>
 										{% endif %}
 										{% endfor %}
 									{% endif %}
