Further Refinements and new js page added

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ pagination:
 			<script src="/assets/js/browser.min.js"></script>
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+			<script src="/assets/js/landing.js"></script>
 
 	</body>
 </html>
